welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:40: error: method isFacingTrail has return statement; needs result type
	return sol
        ^