welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
 def hunt(c:Color) {
	while (!estSurBiscuit()) {
		if (isFacingTrail(c:Color)) {
			avance()
    			baisseBrosse()
    			leveBrosse()
    		}
    		else {
    			droite()
    			if (isFacingTrail(c:Color)) {
    				avance()
    				baisseBrosse()
    				leveBrosse()
    				}
    			else {
    				droite()
    				droite()
    				if (isFacingTrail(c:Color)) {
    					avance()
    					baisseBrosse()
    					leveBrosse()
    					}
    				}
    			}
		}
	prendBiscuit()
 }

def isFacingTrail(c:Color) = {
	var sol: Boolean = false;
	if (!estFaceMur()) {
		avance()
		if (getCouleurSol() == c) {
			recule()
			sol = true;
		}
		else {recule()}
	}
	return sol
}
